# MtyPolkadotSyllabus

./: .gitignore  LearningResources.md  PBASummary.md  README.md  propuesta_labnl.md
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
.obsidian/plugins/obsidian-full-calendar/: data.json
calendar/: (Every R,T) MtyDotRs.md  (Every S,F,R,W,T,M,U) PyCon-MTY.md  (Every S,F,R,W,T,M,U) Rust-Colombia.md  (Every S,F,R,W,T,M,U) RustConf-NM.md  (Every W,T,M,U,S,F,R) RustMx-CDMX.md
exercises/template_p2p/: .dockerignore  README.md
exercises/template_p2p/blockchain/: Cargo.toml  words.json
exercises/template_p2p/blockchain/benches/: encrypt.rs
exercises/template_p2p/blockchain/src/: encryption.rs  lib.rs  utils_crypto.rs
exercises/template_p2p/share_data/: recipes.json
exercises/template_p2p/share_data/src/: main.rs
exercises/testing_libp2p/: Dockerfile  Justfile  fnd_ngh.sh
exercises/testing_libp2p/blockchain/: README.md
exercises/testing_libp2p/blockchain/src/: blocks.rs  main.rs  p2p.rs
exercises/testing_libp2p/go_gamep2p/: go.mod  go.sum  main.go
exercises/testing_libp2p/rs_testp2p/: Cargo.toml
references/: DevResources.md  InkResources.md  PolkadotResources.md  RustResources.md
