[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52.1", features = ["mdns", "tcp", "tokio", "macros", "noise", "yamux", "gossipsub"] }
tokio = { version = "1.29.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time", "fs"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
thiserror = "1.0.43"
anyhow = "1.0.71"
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
rustyline = "12.0.0"
once_cell = "1.18.0"
chrono = "0.4.26"
sha2 = "0.10.7"
hex = "0.4.3"
ratatui = { version = "0.21.0", features = ["macros", "serde"] }
itertools = "0.11.0"
rand = "0.8.5"
primes = "0.3.0"
num-integer = "0.1.45"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio", "futures", "tokio"] }

[[bench]]
name = "encrypt"
harness = false
